test/classes/errors/nilability-assign/assign-oknil-borrowed-from-oknil-owned.chpl
//  lhs: borrowed?  rhs: owned?  ok

class MyClass {  var x: int;  }

var lhs: borrowed MyClass? = nil;
var rhs: owned MyClass?;

lhs = rhs;


